src/yapl/compiler/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package yapl.compiler;
import yapl.lib.CompilerMessage;
public class Parser implements ParserConstants {
  private static int line;
  private static int column;
  private static int errorNo;
  private static String detailedErrorMessage;
  private static String programName;

  public static void main(String args[]) throws ParseException {
   Parser parser;
       if (args.length == 0) {
         System.out.println("JavaCC Parser:  Reading from standard input . . .");
         parser = new Parser(System.in);
       } else if (args.length == 1) {
         System.out.println("JavaCC Parser:  Reading from file " + args[0] + " . . .");
         try {
           parser = new Parser(new java.io.FileInputStream(args[0]));
         } catch (java.io.FileNotFoundException e) {
           System.out.println("JavaCC Parser:  File " + args[0] + " not found.");
           return;
         }
       } else {
         System.out.println("JavaCC Parser:  Usage is one of:");
         System.out.println("         java JavaCCParser< inputfile");
         System.out.println("OR");
         System.out.println("         java JavaCCParser inputfile");
         return;
       }
       try {
         programName = parser.Program();
         CompilerMessage.printOK(programName);
       } catch (ParseException e) {
           CompilerMessage.printError(e, programName);
       } catch(TokenMgrError e) {
           CompilerMessage.printError(e, programName);
       }
  }

  static final public void RelOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
      jj_consume_token(8);
      break;
    case 9:
      jj_consume_token(9);
      break;
    case 10:
      jj_consume_token(10);
      break;
    case 11:
      jj_consume_token(11);
      break;
    default:
      jj_la1[0] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void EqualOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
      jj_consume_token(12);
      break;
    case 13:
      jj_consume_token(13);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void AddOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 14:
      jj_consume_token(14);
      break;
    case 15:
      jj_consume_token(15);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void MulOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 16:
      jj_consume_token(16);
      break;
    case 17:
      jj_consume_token(17);
      break;
    case 18:
      jj_consume_token(18);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Literal() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 19:
      jj_consume_token(19);
      break;
    case 20:
      jj_consume_token(20);
      break;
    case number:
      jj_consume_token(number);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Selector() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 21:
      jj_consume_token(21);
      Expr();
      jj_consume_token(22);
      break;
    case 23:
      jj_consume_token(23);
      jj_consume_token(ident);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 21:
    case 23:
      Selector();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
  }

  static final public void ArrayLen() throws ParseException {
    jj_consume_token(24);
    jj_consume_token(ident);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 21:
    case 23:
      Selector();
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
  }

  static final public void PrimaryExpr() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 19:
    case 20:
    case number:
      Literal();
      break;
    case 25:
      jj_consume_token(25);
      Expr();
      jj_consume_token(26);
      break;
    case ident:
      jj_consume_token(ident);
      A();
      break;
    case 24:
      ArrayLen();
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void A() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 25:
      jj_consume_token(25);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 14:
      case 15:
      case 19:
      case 20:
      case 24:
      case 25:
      case 28:
      case ident:
      case number:
        ArgumentList();
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      jj_consume_token(26);
      break;
    default:
      jj_la1[11] = jj_gen;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 21:
      case 23:
        Selector();
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
    }
  }

  static final public void UnaryExpr() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 14:
    case 15:
      AddOp();
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    PrimaryExpr();
  }

  static final public void MulExpr() throws ParseException {
    UnaryExpr();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
      case 17:
      case 18:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_1;
      }
      MulOp();
      UnaryExpr();
    }
  }

  static final public void AddExpr() throws ParseException {
    MulExpr();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 14:
      case 15:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_2;
      }
      AddOp();
      MulExpr();
    }
  }

  static final public void RelExpr() throws ParseException {
    AddExpr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
    case 9:
    case 10:
    case 11:
      RelOp();
      AddExpr();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

  static final public void EqualExpr() throws ParseException {
    RelExpr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
    case 13:
      EqualOp();
      RelExpr();
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
  }

  static final public void CondAndExpr() throws ParseException {
    EqualExpr();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 27:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_3;
      }
      jj_consume_token(27);
      EqualExpr();
    }
  }

  static final public void CreationExpr() throws ParseException {
    jj_consume_token(28);
    NonArrayType();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 21:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_4;
      }
      jj_consume_token(21);
      Expr();
      jj_consume_token(22);
    }
  }

  static final public void Expr() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 14:
    case 15:
    case 19:
    case 20:
    case 24:
    case 25:
    case ident:
    case number:
      CondAndExpr();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 29:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_5;
        }
        jj_consume_token(29);
        CondAndExpr();
      }
      break;
    case 28:
      CreationExpr();
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ArgumentList() throws ParseException {
    Expr();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 30:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_6;
      }
      jj_consume_token(30);
      Expr();
    }
  }

  static final public void ProcedureCall() throws ParseException {
    jj_consume_token(ident);
    jj_consume_token(25);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 14:
    case 15:
    case 19:
    case 20:
    case 24:
    case 25:
    case 28:
    case ident:
    case number:
      ArgumentList();
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
    jj_consume_token(26);
  }

  static final public void Assignment() throws ParseException {
    jj_consume_token(ident);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 21:
    case 23:
      Selector();
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    jj_consume_token(31);
    Expr();
  }

  static final public void IfStatement() throws ParseException {
    jj_consume_token(32);
    Expr();
    jj_consume_token(33);
    StatementList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 34:
      jj_consume_token(34);
      StatementList();
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
    jj_consume_token(35);
  }

  static final public void WhileStatement() throws ParseException {
    jj_consume_token(36);
    Expr();
    jj_consume_token(37);
    StatementList();
    jj_consume_token(38);
  }

  static final public void ReturnStatement() throws ParseException {
    jj_consume_token(39);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 14:
    case 15:
    case 19:
    case 20:
    case 24:
    case 25:
    case 28:
    case ident:
    case number:
      Expr();
      break;
    default:
      jj_la1[25] = jj_gen;
      ;
    }
  }

  static final public void WriteStatement() throws ParseException {
    jj_consume_token(40);
    jj_consume_token(string);
  }

  static final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 32:
      IfStatement();
      break;
    case 36:
      WhileStatement();
      break;
    case 39:
      ReturnStatement();
      break;
    case 40:
      WriteStatement();
      break;
    case ident:
      jj_consume_token(ident);
      B();
      break;
    case 42:
    case 51:
      Block();
      break;
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void B() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 25:
      jj_consume_token(25);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 14:
      case 15:
      case 19:
      case 20:
      case 24:
      case 25:
      case 28:
      case ident:
      case number:
        ArgumentList();
        break;
      default:
        jj_la1[27] = jj_gen;
        ;
      }
      jj_consume_token(26);
      break;
    case 21:
    case 23:
    case 31:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 21:
      case 23:
        Selector();
        break;
      default:
        jj_la1[28] = jj_gen;
        ;
      }
      jj_consume_token(31);
      Expr();
      break;
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void StatementList() throws ParseException {
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 32:
      case 36:
      case 39:
      case 40:
      case 42:
      case 51:
      case ident:
        ;
        break;
      default:
        jj_la1[30] = jj_gen;
        break label_7;
      }
      Statement();
      jj_consume_token(41);
    }
  }

  static final public void Block() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 51:
      Decl();
      break;
    default:
      jj_la1[31] = jj_gen;
      ;
    }
    jj_consume_token(42);
    StatementList();
    jj_consume_token(43);
  }

  static final public void FormalParam() throws ParseException {
    Type();
    jj_consume_token(ident);
  }

  static final public void NonArrayType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 44:
      jj_consume_token(44);
      break;
    case 45:
      jj_consume_token(45);
      break;
    case ident:
      jj_consume_token(ident);
      break;
    default:
      jj_la1[32] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Type() throws ParseException {
    NonArrayType();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 21:
        ;
        break;
      default:
        jj_la1[33] = jj_gen;
        break label_8;
      }
      jj_consume_token(21);
      jj_consume_token(22);
    }
  }

  static final public void ReturnType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
      break;
    case 44:
    case 45:
    case ident:
      Type();
      break;
    default:
      jj_la1[34] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ConstDecl() throws ParseException {
    jj_consume_token(47);
    jj_consume_token(ident);
    jj_consume_token(48);
    Literal();
    jj_consume_token(41);
  }

  static final public void VarDecl() throws ParseException {
    Type();
    jj_consume_token(ident);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 30:
        ;
        break;
      default:
        jj_la1[35] = jj_gen;
        break label_9;
      }
      jj_consume_token(30);
      jj_consume_token(ident);
    }
    jj_consume_token(41);
  }

  static final public void TypeDecl() throws ParseException {
    jj_consume_token(49);
    jj_consume_token(ident);
    VarDecl();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 44:
      case 45:
      case ident:
        ;
        break;
      default:
        jj_la1[36] = jj_gen;
        break label_10;
      }
      VarDecl();
    }
    jj_consume_token(50);
    jj_consume_token(41);
  }

  static final public void Decl() throws ParseException {
    jj_consume_token(51);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 44:
      case 45:
      case 47:
      case 49:
      case ident:
        ;
        break;
      default:
        jj_la1[37] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 47:
        ConstDecl();
        break;
      case 44:
      case 45:
      case ident:
        VarDecl();
        break;
      case 49:
        TypeDecl();
        break;
      default:
        jj_la1[38] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void FormalParamList() throws ParseException {
    FormalParam();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 30:
        ;
        break;
      default:
        jj_la1[39] = jj_gen;
        break label_12;
      }
      jj_consume_token(30);
      FormalParam();
    }
  }

  static final public void Procedure() throws ParseException {
    jj_consume_token(52);
    ReturnType();
    jj_consume_token(ident);
    jj_consume_token(25);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 44:
    case 45:
    case ident:
      FormalParamList();
      break;
    default:
      jj_la1[40] = jj_gen;
      ;
    }
    jj_consume_token(26);
    Block();
    jj_consume_token(ident);
    jj_consume_token(41);
  }

  static final public String Program() throws ParseException {
    Token program = null;
    String res = "";
    jj_consume_token(53);
    program = jj_consume_token(ident);
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 51:
      case 52:
        ;
        break;
      default:
        jj_la1[41] = jj_gen;
        break label_13;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 51:
        Decl();
        break;
      case 52:
        Procedure();
        break;
      default:
        jj_la1[42] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(42);
    StatementList();
    jj_consume_token(43);
    jj_consume_token(ident);
    jj_consume_token(23);
            res = program.toString();
            programName = res;
            {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public ParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[43];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0xf00,0x3000,0xc000,0x70000,0x180000,0xa00000,0xa00000,0xa00000,0x3180000,0x1318c000,0xa00000,0x2000000,0xc000,0x70000,0xc000,0xf00,0x3000,0x8000000,0x200000,0x20000000,0x1318c000,0x40000000,0x1318c000,0xa00000,0x0,0x1318c000,0x0,0x1318c000,0xa00000,0x82a00000,0x0,0x0,0x0,0x200000,0x0,0x40000000,0x0,0x0,0x0,0x40000000,0x0,0x0,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x2000000,0x0,0x0,0x0,0x2800000,0x2800000,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x2800000,0x0,0x2800000,0x0,0x4,0x2800000,0x880591,0x2800000,0x0,0x0,0x880591,0x80000,0x803000,0x0,0x807000,0x0,0x803000,0x82b000,0x82b000,0x0,0x803000,0x180000,0x180000,};
   }

  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 43; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 43; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Parser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 43; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 43; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Parser(ParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 43; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 43; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[60];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 43; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 60; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
